<resources>
    <string name="app_name">FinApp</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="we_will_send_you_an_otp_on_given_number">We will send you an OTP on given number</string>
    <string name="please_enter_otp">please enter OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="submit">Submit</string>
</resources>